fix(styling): couple of small alignment issues when using flex - when using flex on `.slick-cell` like in Example 7, a couple of small issues came up mostly with flex alignment - also fix some flex issues directly in ms-select lib and update it here to get fixes, also remove some now duplicate CSS - we should use `column-gap` instead of `gap` to only change the gap horizontally but not vertically

--- a/examples/vite-demo-vanilla-bundle/src/examples/example06.scss
+++ b/examples/vite-demo-vanilla-bundle/src/examples/example06.scss
@@ -4,7 +4,7 @@
   .slick-cell {
     display: inline-flex;
     align-items: center;
-    gap: 4px;
+    column-gap: 4px;
   }
 
   .avg-total {
